--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,24 @@
-
+.form{
+    margin-left: 40rem;
+    margin-top:12rem;
+    border:1px solid black;
+    width: 20rem;
+    height:20rem;
+    border-radius:2rem;
+}
+.form2{
+    margin-left: 40rem;
+    margin-top:12rem;
+    border:1px solid black;
+    width: 20rem;
+    height:30rem;
+    border-radius:2rem;
+}
+.form3{
+    margin-left: 40rem;
+    margin-top:12rem;
+    border:1px solid black;
+    width: 30rem;
+    height:30rem;
+    border-radius:2rem;
+}
