--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .form{
     margin-left: 40rem;
     margin-top:12rem;
-    border:1px solid black;
+    border:5px solid black;
     width: 20rem;
     height:20rem;
     border-radius:2rem;
@@ -9,7 +9,7 @@
 .form2{
     margin-left: 40rem;
     margin-top:12rem;
-    border:1px solid black;
+    border:5px solid black;
     width: 20rem;
     height:30rem;
     border-radius:2rem;
@@ -17,8 +17,11 @@
 .form3{
     margin-left: 40rem;
     margin-top:12rem;
-    border:1px solid black;
+    border:5px solid black;
     width: 30rem;
     height:30rem;
     border-radius:2rem;
+}
+Body{
+    background-image: url("https://cdn.wallpapersafari.com/17/89/hSWXMF.jpg");
 }
